# Plastun-Gazebo-ROS-URL

./: Global_readme.txt  README.md  readme.txt
plastun_control/: CMakeLists.txt  package.xml
plastun_control/config/: plastun_control.yaml  plastun_control.yaml~
plastun_control/launch/: plastun_control.launch  plastun_control.launch~
plastun_gazebo/: CMakeLists.txt  package.xml
plastun_gazebo/launch/: plastun_gazebo.launch  plastun_gazebo.launch~
plastun_gazebo/maps/Labirint/: model.config  model.sdf
plastun_gazebo/maps/Plafon/: model.config  model.sdf  plafon.dae  plafon_min.stl
plastun_gazebo/maps/floor_test/: model.config  model.sdf
plastun_gazebo/worlds/: komnata.world
plastun_navigation/: CMakeLists.txt  Readme.txt  package.xml
plastun_navigation/config/: amcl_stage.xml  move_base.xml
plastun_navigation/config/move_base/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params.yaml~
plastun_navigation/launch/: amcl.launch  amcl.launch~  amcl_stage.xml  amcl_stage.xml~  gmapping.launch  gmapping.launch~  move_base.xml  navigation.launch  savemap.launch  savemap.launch~
plastun_navigation/launch/move_base/: base_local_planner_params.yaml~  costmap_common_params.yaml~  move_base.xml  move_base.xml~
plastun_navigation/maps/: Labirint.yaml  lab_223.pgm  lab_223.yaml
plastun_navigation/plastun_global_navigation/: CMakeLists.txt  package.xml
plastun_navigation/plastun_global_navigation/launch/: amcl.launch~  amcl_stage.xml  gmapping.launch  gmapping.launch~  savemap.launch~
plastun_parts_control/plastun_activate_laser/: CMakeLists.txt  CMakeLists.txt.user.461cb02  package.xml
plastun_parts_control/plastun_activate_laser/action/: Fire.action
plastun_parts_control/plastun_activate_laser/src/: activate_laser.cpp  activate_laser.h  main.cpp
plastun_parts_control/plastun_cascad_testing/: CMakeLists.txt  Readme.txt  package.xml  plastun_cascad_testing.launch
plastun_parts_control/plastun_cascad_testing/launch/: plastun_cascad_testing.launch
plastun_parts_control/plastun_cascad_testing/src/: cascad_testing.cpp  cascad_testing.cpp~  cascad_testing.h  main.cpp
plastun_parts_control/plastun_control_turret/: CMakeLists.txt
plastun_parts_control/plastun_control_turret/src/: control_turret.cpp  control_turret.h  main.cpp
plastun_parts_control/plastun_general_targeting/: CMakeLists.txt  CMakeLists.txt.user.461cb02  CMakeLists.txt.user.601c7e8  Readme.txt  package.xml
plastun_parts_control/plastun_general_targeting/action/: access_targeting.action
plastun_parts_control/plastun_general_targeting/src/: general_targeting.cpp  general_targeting.cpp~  general_targeting.h  main.cpp
plastun_parts_control/plastun_global_control_system/: CMakeLists.txt  CMakeLists.txt.user.461cb02  Readme.txt  package.xml
plastun_parts_control/plastun_global_control_system/src/: global_control_system.cpp  global_control_system.h  main.cpp
plastun_parts_control/plastun_image_detect/: CMakeLists.txt  CMakeLists.txt.user.461cb02  Readme.txt  package.xml
plastun_parts_control/plastun_image_detect/action/: access_detect.action
plastun_parts_control/plastun_image_detect/src/: image_converter.cpp  image_converter.h  image_detect.cpp  image_detect.cpp~  image_detect.h  main.cpp
plastun_parts_control/plastun_launch_files_control/: CMakeLists.txt  Readme.txt  package.xml
plastun_parts_control/plastun_launch_files_control/launch/: global_control_system.launch  global_control_system.launch~  rotate_control_system.launch  rotate_control_system.launch~
plastun_parts_control/plastun_move_control/: CMakeLists.txt  package.xml
plastun_parts_control/plastun_move_control/src/: main.cpp  move_control.cpp  move_control.h
plastun_parts_control/plastun_rotate_turret/: CMakeLists.txt  CMakeLists.txt.user.461cb02  CMakeLists.txt.user.601c7e8
plastun_parts_control/plastun_rotate_turret/action/: angle.action
plastun_parts_control/plastun_rotate_turret/src/: PlaneInterpolation.cpp  PlaneInterpolation.h  main.cpp  rotate_turret.cpp  rotate_turret.h
plastun_robot_modules/bins/: CMakeLists.txt  Readme.txt  package.xml
plastun_robot_modules/bins/.svn/: entries
plastun_robot_modules/bins/launch/: bins.launch
plastun_robot_modules/bins/src/: AHRSManager.cpp  AHRSManager.h  ahrs.h
plastun_robot_modules/common/: CMakeLists.txt  Readme.txt  package.xml
plastun_robot_modules/common/.svn/: entries
plastun_robot_modules/common/include/: BST.h  MapBlock.h  MemoryBank.h  Observer.h  SerializeHelper.h  Socket.h  TimeProcs.h  TriGeom.h  crc.h  inifile.h
plastun_robot_modules/common/src/: Geom.cpp  NormalRand.cpp  SerializeHelper.cpp  TFile.cpp  matrixHelper.cpp
plastun_robot_modules/odo_tf_pub/: CMakeLists.txt  Readme.txt  package.xml
plastun_robot_modules/odo_tf_pub/.svn/: wc.db
plastun_robot_modules/odo_tf_pub/launch/: odo_tf.launch  odo_tf_sim.launch
plastun_robot_modules/odo_tf_pub/src/: tf_broadcaster.cpp
plastun_robot_modules/plastun_modules_launches/: CMakeLists.txt  Readme.txt  package.xml
plastun_robot_modules/plastun_modules_launches/launch/: activate_laser.launch  all_modules.launch  bins.launch  cam.launch  cam.launch~  driving.launch  hokuyo.launch  hokuyo.launch~  odo_tf.launch  rotate_turret.launch
plastun_robot_modules/plastun_modules_launches/launches/: all_modules.launch  all_modules.launch~  bins.launch  driving.launch  odo_tf.launch  odo_tf.launch~
plastun_robot_modules/spb_cameras/: CMakeLists.txt~  Readme.txt  package.xml
plastun_robot_modules/spb_cameras/.svn/: all-wcprops  entries
plastun_robot_modules/spb_cameras/config/: calib.yaml
plastun_robot_modules/spb_cameras/launch/: attach_info.launch  calibright  cam.launch  cam.launch~  infra.launch  proc_disparity.launch  proc_disparity.launch~  raw_proc_disparity.launch  stereo.launch  (+4 more)
plastun_scripts/plastun_image_detect/: CMakeLists.txt  package.xml  package.xml~
plastun_scripts/plastun_system_control/: CMakeLists.txt  package.xml
(+247 files in other folders)
