<?xml version="1.0"?>
<package>
  <name>plastun_navigation</name>
  <version>0.0.0</version>
  <description>The navigation for Plastun</description>

  <maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>
  <license>None</license>
  <url type="website">https://Lupasic@bitbucket.org/Lupasic/mrc-plastun-gazebo-ros.git</url>
  <author email="obulichev@yandex.ru">Bulichev Oleg</author>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>