<?xml version="1.0"?>
<package>
  <name>plastun_global_control_system</name>
  <version>0.0.0</version>
  <description>The plastun_global_control_system package</description>



  <maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>
  <license>None</license>
  <url type="website">https://Lupasic@bitbucket.org/Lupasic/mrc-plastun-gazebo-ros.git</url>
  <author email="obulichev@yandex.ru">Bulichev Oleg</author>


  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
<!-- dependence by servers -->
   <build_depend>plastun_activate_laser</build_depend>
   <build_depend>plastun_general_targeting</build_depend>
   <build_depend>plastun_image_detect</build_depend>
   <build_depend>plastun_rotate_turret</build_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>