<?xml version="1.0"?>
<package>
  <name>plastun_image_detect</name>
  <version>0.0.0</version>
  <description>The plastun_image_detect package</description>

  <maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>
  <license>None</license>
  <url type="website">https://Lupasic@bitbucket.org/Lupasic/mrc-plastun-gazebo-url-ros.git</url>
  <author email="obulichev@yandex.ru">Bulichev Oleg</author>


  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
