<?xml version="1.0"?>
<package>
  <name>common</name>
  <version>0.0.0</version>
  <description>The common package for using Common from old monbile project</description>

  <maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>
  <license>None</license>
  <url type="website">https://Lupasic@bitbucket.org/Lupasic/mrc-plastun-gazebo-url-ros.git</url>
  <author email="obulichev@yandex.ru">Bulichev Oleg</author>



  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>