<?xml version="1.0"?>
<package>
  <name>odo_tf_pub</name>
  <version>0.0.0</version>
  <description>The odo_tf_pub package</description>

  <maintainer email="obulichev@yandex.ru">Bulichev Oleg</maintainer>
  <license>None</license>
  <url type="website">https://Lupasic@bitbucket.org/Lupasic/mrc-plastun-gazebo-ros.git</url>
  <author email="obulichev@yandex.ru">Bulichev Oleg</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <export>


  </export>
</package>